--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: nonfiction blog
 ---
 
 {% for post in site.posts limit:5 %}
-<h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+<h2><a href="/blog{{ post.url }}">{{ post.title }}</a></h2>
 {{ post.content }}
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
