--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@ title: nonfiction blog
 
 {% for post in site.posts limit:5 %}
 <h2><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></h2>
-{{ post.content }}
+{% if post.summary %}
+  {{ post.summary }}
+{% else %}
+  {{ post.content }}
+{% endif %}
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
