Adding basic FB Graph.

--- a/index.html
+++ b/index.html
@@ -12,3 +12,5 @@ title: nonfiction blog
 {% endif %}
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
+
+<p><a href="/blog/archives.html">Archives</a></p>
