--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ title: nonfiction blog
 <em>Posted on {{ post.date | date_to_long_string }}.</em>
 {% endfor %}
 
-<p><a href="/blog/archives.html">Archives</a></p>
+<div id="archives"><a href="/blog/archives.html">Archives</a></div>
